TODO: Stop checking isatty on Windows write()

This check was added for bpo-11395 in 2011. Versions of windows before
Windows 8 required the check as write size to a tty was limited (
https://github.com/python/cpython/issues/55604#issuecomment-1093537612).

Based on PEP 11, the last Windows 8 support ended in 2023, so this is no
longer needed on any currently supported windows platforms.

This is tested by test_os.test_write_windows_console